# ZhongWenXueXi-AI

./: README.md
Apps/capture-hanzi-streams/: README.md  fa.md  pyproject.toml
Apps/capture-hanzi-streams/src/capture_hanzi_streams/: __init__.py
Apps/chinese-tonal-recognizer/: README.md  pyproject.toml
Apps/chinese-tonal-recognizer/src/chinese_tonal_recognizer/: __init__.py
Apps/lang-learn-model/: Prompt-Scratchpad.txt
Apps/rememberwords/: README.md  pyproject.toml
Apps/rememberwords/src/rememberwords/: __init__.py
