[project]
name = "chinese-tonal-recognizer"
version = "0.1.0"
description = "Recognize Mandarin tone contours from spoken WAV audio"
readme = "README.md"
authors = [
    { name = "Brian Abbott", email = "briancabbott@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
]

[project.scripts]
chinese-tonal-recognizer = "chinese_tonal_recognizer:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
